[package]
name = "fndg"
version = "0.4.1"
authors = ["Cem Geçgel <gecgelcem@outlook.com>"]
edition = "2021"
description = "An unchained map game where you battle for resources while building your nation up."
readme = "README.md"
repository = "https://github.com/Waistax/fndg"
license = "MIT OR Apache-2.0"
keywords = ["gamedev"]
categories = ["games"]

[dependencies]
min_gl = { version = "0.3.0", features = ["min_timer"] }
min_timer = { version = "0.4.0", features = ["hrt"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
rand = "0.8.4"
hex2d = "1.1.0"
bracket-noise = "0.8.2"

[profile.dev]
opt-level = 3
